osprey_worker/src/osprey/engine/stdlib/udfs/tests/test_rules/test_rule_will_error_if_variable_interpolation_attempted_in_non_fstring.txt
error: variable interpolation attempted in non-format string
--> main.sml:3:39
     |
   3 | R1 = Rule(when_all=[True], description='Interpolated: {X}')
     |                                        ^ this string contains what looks like variable interpolation, but is not an f-string
                                              | found: `X`
                                              | consider prefixing with `f`